# electronics_shop

./: README.md  item.py  pyproject.toml
shop/: errors.py  item.py  keyboard.py  phone.py
tests/: conftest.py  test_errors.py  test_item.py  test_keyboard.py  test_phone.py
tests/data/: test.csv  test2.csv
