[tool.poetry]
name = "electronics-shop"
version = "0.1.0"
description = ""
authors = ["KatyshaVtyrina <katyshavtyrina@gmail.com>"]
readme = "README.md"
packages = [{include = "electronics_shop"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.1"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
